<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="176dp"
        android:text="@string/lbl_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/lbl_ingresar_cantida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_sistema_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radio_decimal"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/radio_binario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binario" />

        <RadioButton
            android:id="@+id/radio_octal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/octal" />

        <RadioButton
            android:id="@+id/radio_hexa"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="17dp"
        android:text="@string/lbl_converion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/chk_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="19dp"
        android:text="@string/decimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBox_binario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/binario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_decimal" />

    <CheckBox
        android:id="@+id/checkBox_octal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="12dp"
        android:text="@string/octal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_binario" />

    <CheckBox
        android:id="@+id/checkBox_hexadecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="7dp"
        android:text="@string/hexadecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_octal" />

    <EditText
        android:id="@+id/caja_decimal"
        android:layout_width="215dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/chk_decimal"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/caja_binario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/checkBox_binario"
        app:layout_constraintTop_toBottomOf="@+id/caja_decimal" />

    <EditText
        android:id="@+id/caja_octal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/checkBox_octal"
        app:layout_constraintTop_toBottomOf="@+id/caja_binario" />

    <EditText
        android:id="@+id/caja_hexadecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/checkBox_hexadecimal"
        app:layout_constraintTop_toBottomOf="@+id/caja_octal" />
</androidx.constraintlayout.widget.ConstraintLayout>